# amc-mcp

./: .dockerignore  Dockerfile  FASTMCP_SETUP.md  LICENSE  README.md  docker-compose.yml  lm-studio-config.json  mcp.json  pyproject.toml  requirements.txt  start.sh  test_server.py
config/: nginx.conf
data/: movies.json  seats.json  showtimes.json  theaters.json
src/amc_mcp/: __init__.py  fastmcp_server.py  server.py
src/amc_mcp.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
web/: index.html
